<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Galery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Analysis Result</string>
    <string name="preview_image_description">Preview Picture</string>
    <string name="history">History</string>
    <string name="Machine_Learning">ML Cancer Detector</string>
    <string name="result_page">Result Page</string>
    <string name="delete_history">Delete History</string>
    <string name="view_news">View News</string>
    <string name="image_classifier_failed">Proses klasifikasi gagal. Silakan coba lagi.</string>

</resources>